{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 602,
  "lineage": "48b77140-8b87-708a-f005-547bf3032220",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-22T10:40:32.533-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ubuntu-firewall-http",
            "name": "ubuntu-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/ubuntu-network",
            "priority": 1000,
            "project": "web-terraform-ansible",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/firewalls/ubuntu-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ubuntu-firewall-http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.ubuntu_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-22T10:40:32.595-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ubuntu-firewall-https",
            "name": "ubuntu-firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/ubuntu-network",
            "priority": 1000,
            "project": "web-terraform-ansible",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/firewalls/ubuntu-firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ubuntu-firewall-https"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.ubuntu_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-22T10:40:32.604-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ubuntu-firewall-icmp",
            "name": "ubuntu-firewall-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/ubuntu-network",
            "priority": 1000,
            "project": "web-terraform-ansible",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/firewalls/ubuntu-firewall-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ubuntu-firewall-icmp"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.ubuntu_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-22T10:40:32.521-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "ubuntu-firewall-ssh",
            "name": "ubuntu-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/ubuntu-network",
            "priority": 1000,
            "project": "web-terraform-ansible",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/firewalls/ubuntu-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ubuntu-firewall-ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.ubuntu_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191021",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/zones/us-central1-a/disks/vm-750b1ba674a6cbb8"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "vm-750b1ba674a6cbb8",
            "instance_id": "1359855981768668807",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDlaiHs+2ypJHmC9NNEpG0K2GhjV6UeOP+aAvrLAtqTGQJs8nhmd/WCWQUjZ/zr0trAOThYw1iuOQg3OaCkJbPE/PgBFMccJMP86VX/QQBe43uRn/fv9ys5c17QgLqetUyp736bgHWq+3V8lNvtwVyhheVTCFuUls9yrPfelULA1+3k4nrVui7gjtG284qfI+BjHwhy6ovE8c8L9WNVX2fJzo3hLruj6VlLKvaz4dvLNfsNTOykH70SMSHxFYJT6yJ1Y8hb2dwyTAfZExDNl3mIa4I878qfwuAlwNnoqsa7Bq7itFBaiayAURSoV+gBThTBCwb/JaF0ORYAVo3Vxma9 ubuntu@instance-1\n"
            },
            "metadata_fingerprint": "deqB-vAO7V4=",
            "name": "vm-750b1ba674a6cbb8",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.201.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/default",
                "network_ip": "10.128.0.52",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/regions/us-central1/subnetworks/default",
                "subnetwork_project": "web-terraform-ansible"
              }
            ],
            "project": "web-terraform-ansible",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/zones/us-central1-a/instances/vm-750b1ba674a6cbb8",
            "tags": [
              "ubuntu-firewall-http",
              "ubuntu-firewall-https",
              "ubuntu-firewall-icmp",
              "ubuntu-firewall-ssh"
            ],
            "tags_fingerprint": "JIMAyWe-1WE=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ubuntu_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "ubuntu-network",
            "name": "ubuntu-network",
            "project": "web-terraform-ansible",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-terraform-ansible/global/networks/ubuntu-network"
          }
        }
      ]
    }
  ]
}